# md

./: .gitignore  CHANGELOG.md  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  fix-eslint.sh  package-lock.json  package.json  start.sh  ИНСТРУКЦИЯ_ДЛЯ_МИХАИЛА.md  РЕШЕНИЕ_ОШИБОК.md
ai-analyzer/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.minimal  README.md  main.py  package.json  pyproject.toml  railway.json  requirements.txt
ai-analyzer/app/: __init__.py
ai-analyzer/app/api/: __init__.py  routes.py
ai-analyzer/app/core/: __init__.py  config.py  exceptions.py  logging.py
ai-analyzer/app/database/: __init__.py  connection.py
ai-analyzer/app/schemas/: response.py
ai-analyzer/app/services/: ai_service.py  cache_service.py  database_service.py
client/: .env.example  .eslintrc.js  .eslintrc.json  .npmrc  Dockerfile  Dockerfile.minimal  Dockerfile.railway  Dockerfile.railway-final  Dockerfile.railway-simple  Dockerfile.simple  README.md  nginx.conf  nixpacks.toml  package.json  railway.json  tailwind.config.js  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.tsx
client/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
client/src/hooks/: useAuth.tsx
client/src/pages/: AuthPage.tsx  ConsultationsPage.tsx  HomePage.tsx  ProfilePage.tsx  ResultsPage.tsx  SurveyPage.tsx
client/src/styles/: index.css
server/: .env.example  .eslintrc.json  DATABASE_SETUP.md  Dockerfile  README.md  SMS_SETUP.md  nodemon.json  package.json  tsconfig.json
server/src/: server.ts
server/src/database/: schema.prisma  seed.ts
server/src/database/migrations/: 001_initial_schema.sql
server/src/database/migrations/20250728183107_mark/: migration.sql
server/src/database/migrations/20250729114307_add_phone_verification/: migration.sql
server/src/database/migrations/20250729115709_update_phone_verification_hash/: migration.sql
server/src/database/migrations/20250729122222_add_consultation_log/: migration.sql
server/src/database/migrations/20250730111542_add_consultations_and_remove_supplements/: migration.sql
server/src/database/migrations/20250730120045_remove_orders_and_supplements/: migration.sql
server/src/middleware/: auth.ts  validation.ts
server/src/models/: File.ts  Form.ts  Order.ts  Recommendation.ts  Supplement.ts  User.ts
server/src/routes/: auth.ts  consultations.ts  forms.ts  users.ts
server/src/services/: ConsultationService.ts  SmsService.ts
server/src/utils/: logger.ts
